# tell-me-the-rules

./: .gitignore  README.md  pyproject.toml
prompts/: 01-intial-prompt.text
rule-finder/: Makefile  docker-compose.yml
rule-finder/backend/: Dockerfile  main.py  requirements.txt
rule-finder/frontend/: index.html  script.js  style.css
