[project]
name = "tell-me-the-rules"
version = "0.1.0"
description = ""
authors = [
    {name = "Craig MacLachlan",email = "cs.maclachlan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff (>=0.12.2,<0.13.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "chromadb-client (>=1.0.15,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
